--- a/day4/demo/littlePicture/views/index.ejs
+++ b/day4/demo/littlePicture/views/index.ejs
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">相册 <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">添加文件</a></li>
+                <li><a href="javascript:;" id="add_dir">添加文件</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -35,7 +35,7 @@
 <div class="row">
     <% for(var i=0;i < allblumas.length;i++) {%>
     <div class="col-xs-6 col-md-3">
-        <a href="#" class="thumbnail">
+        <a href="<%= allblumas[i] %>" class="thumbnail">
             <img src="img/timg.jpg">
         </a>
         <p><%= allblumas[i] %></p>
