--- a/day7/demo/shuohsuo/views/login.ejs
+++ b/day7/demo/shuohsuo/views/login.ejs
@@ -6,6 +6,21 @@
     <link rel="stylesheet" href="/css/bootstrap.css"/>
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <style>
+        label{
+            display: inline-block;
+            min-width: 100px;
+            text-align: right;
+        }
+        .form-group input{
+            display: inline-block;
+            width: 300px;
+        }
+        #submit_btn{
+            margin: 0 auto;
+            display: block;
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -34,5 +49,24 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+
+<div>
+    <div class="container" style="padding: 0 300px">
+        <div class="form-group" style="max-width: 500px">
+            <label for="">用户名：</label>
+            <input type="text" class="form-control" id="name">
+        </div>
+        <div class="form-group" style="max-width: 500px">
+            <label for="">密码：</label>
+            <input type="text" class="form-control" id="pass">
+        </div>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox"> 同意
+            </label>
+        </div>
+        <button type="submit" class="btn btn-default" id="submit_btn">登录</button>
+    </div>
+</div>
 </body>
 </html>
