--- a/day7/demo/shuohsuo/views/login.ejs
+++ b/day7/demo/shuohsuo/views/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>班级说说</title>
+    <title>班级说说-登录</title>
     <link rel="stylesheet" href="/css/bootstrap.css"/>
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
@@ -23,38 +23,7 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-default">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">班级说说</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a href="#">全部说说</a></li>
-                <li><a href="#">成员列表</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <% if(login==1){ %>
-                <li><a>你好：<%= usernmae %></a></li>
-                <li id="out_login"><a>退出登录</a></li>
-                <% }else { %>
-                    <li><a href="/regist">注册</a></li>
-                    <li class="active"><a href="#">登录</a></li>
-                <% } %>
-
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+<% include header.ejs %>
 
 <div>
     <% if(login==1){ %>
@@ -70,11 +39,6 @@
         <div class="form-group" style="max-width: 500px">
             <label for="">密码：</label>
             <input type="text" class="form-control" id="pass">
-        </div>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox"> 同意
-            </label>
         </div>
         <button type="submit" class="btn btn-default" id="submit_btn">登录</button>
     </div>
