--- a/day7/demo/shuohsuo/views/login.ejs
+++ b/day7/demo/shuohsuo/views/login.ejs
@@ -63,6 +63,8 @@
                     if(res.retcode==1){
                         alert('登录成功')
                         location.href='/'
+                    }else{
+                        alert('账号密码错误')
                     }
                 }
             })
