--- a/day7/demo/shuohsuo/views/header.ejs
+++ b/day7/demo/shuohsuo/views/header.ejs
@@ -8,13 +8,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">班级说说</a>
+            <a class="navbar-brand" href="/">班级说说</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#">全部说说</a></li>
+                <li class="<%= active=='all'?'active':'' %>"><a href="/allMess">全部说说</a></li>
                 <li><a href="#">成员列表</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -30,3 +30,62 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+
+<script>
+    $(function(){
+        //注册
+        $('#regist_btn').on('click',function(){
+            $.ajax({
+                url:'/doregist',
+                dataType:'json',
+                data:{
+                    name:$('#name').val(),
+                    password:$('#pass').val(),
+                },
+                type:'post',
+                success:function(res){
+                    console.log(res);
+                    if(res.retcode==1){
+                        alert('注册成功')
+                        location.href='/'
+                    }
+                }
+            })
+        })
+        //登录
+        $('#login_btn').on('click',function(){
+            $.ajax({
+                url:'/doIndex',
+                dataType:'json',
+                data:{
+                    name:$('#name').val(),
+                    password:$('#pass').val(),
+                },
+                type:'post',
+                success:function(res){
+                    console.log(res);
+                    if(res.retcode==1){
+                        alert('登录成功')
+                        location.href='/'
+                    }else{
+                        alert('账号密码错误')
+                    }
+                }
+            })
+        })
+        //退出登录
+        $('#out_login').on('click',function(){
+            $.ajax({
+                url:'/outlogin',
+                dataType:'json',
+                type:'post',
+                success:function(res){
+                    console.log(res);
+                    if(res.retcode==1){
+                        location.href='/'
+                    }
+                }
+            })
+        })
+    })
+</script>
