--- a/day7/demo/shuohsuo/views/login.ejs
+++ b/day7/demo/shuohsuo/views/login.ejs
@@ -29,7 +29,20 @@
     <% if(login==1){ %>
     <div class="container">
         <h1>欢迎登录班级说说！</h1>
-
+        <br/>
+        <br/>
+        <h5>添加留言：</h5>
+        <form>
+            <div class="form-group">
+                <label for="tip_title">标题:</label>
+                <input type="email" class="form-control" id="tip_title">
+            </div>
+            <div class="form-group">
+                <label style="vertical-align: top;">内容:</label>
+                <textarea id="tip_content" cols="30" rows="10" style="resize:none"></textarea>
+            </div>
+            <button type="button" class="btn btn-default" id="btn_mess_submit">提交</button>
+        </form>
     </div>
     <% }else { %>
     <div class="container" style="padding: 0 300px">
@@ -41,7 +54,7 @@
             <label for="">密码：</label>
             <input type="text" class="form-control" id="pass">
         </div>
-        <button type="submit" class="btn btn-default" id="submit_btn">登录</button>
+        <button type="submit" class="btn btn-default" id="login_btn">登录</button>
     </div>
     <% } %>
 </div>
@@ -49,37 +62,16 @@
 </html>
 <script>
     $(function(){
-        $('#submit_btn').on('click',function(){
-            $.ajax({
-                url:'/doIndex',
-                dataType:'json',
-                data:{
-                    name:$('#name').val(),
-                    password:$('#pass').val(),
-                },
-                type:'post',
-                success:function(res){
-                    console.log(res);
-                    if(res.retcode==1){
-                        alert('登录成功')
-                        location.href='/'
-                    }else{
-                        alert('账号密码错误')
-                    }
-                }
-            })
-        })
-
-        $('#out_login').on('click',function(){
-            $.ajax({
-                url:'/outlogin',
-                dataType:'json',
-                type:'post',
-                success:function(res){
-                    console.log(res);
-                    if(res.retcode==1){
-                        location.href='/'
-                    }
+        //提交留言
+        $('#btn_mess_submit').on('click',function(){
+            $.post('/referMess',{
+                title:$('#tip_title').val(),
+                content:$('#tip_content').val()
+            },function(res){
+                console.log(res);
+                if(res.retcode==1){
+                    alert('添加成功')
+                    location.href='/'
                 }
             })
         })
