--- a/day7/demo/shuohsuo/views/regist.ejs
+++ b/day7/demo/shuohsuo/views/regist.ejs
@@ -26,32 +26,10 @@
                     <input type="checkbox"> 同意
                 </label>
             </div>
-            <button type="submit" class="btn btn-default" id="submit_btn">注册</button>
+            <button type="submit" class="btn btn-default" id="regist_btn">注册</button>
         </div>
     </div>
 </div>
 
 </body>
 </html>
-<script>
-    $(function(){
-        $('#submit_btn').on('click',function(){
-            $.ajax({
-                url:'/doregist',
-                dataType:'json',
-                data:{
-                    name:$('#name').val(),
-                    password:$('#pass').val(),
-                },
-                type:'post',
-                success:function(res){
-                    console.log(res);
-                    if(res.retcode==1){
-                        alert('注册成功')
-                        location.href='/'
-                    }
-                }
-            })
-        })
-    })
-</script>
